# professional-services-data-validator

./: .coveragerc  .flake8  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASING.md  __main__.py  cloudbuild.yaml  freeze.txt  main.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  source-sql.sql  source_query.sql  source_table_data.json  table_data.json  target_query.sql  target_table_data.json
.github/: release-please.yml
.github/workflows/: labeler.yml
ci/: Dockerfile.cicd  build.sh  cloud_functions.sh  cloudbuild_pypi.yaml  install_cloud_proxy.sh  release_latest.sh  release_pypi.sh
create/this/path/: example.connection.json
data_validation/: __init__.py  __main__.py  app.py  cli_tools.py  client_info.py  clients.py  combiner.py  command_line.py  config_manager.py  consts.py  data_validation.py  exceptions.py  find_tables.py  gcs_helper.py  jellyfish_distance.py  metadata.py  partition_builder.py  schema_validation.py  secret_manager.py  secret_manger.py  state_manager.py  validation_builder.py
data_validation/composer/: ._operators.py  operators.py
data_validation/data_sources/: bigquery.py  data_client.py  example_client.py
data_validation/data_sources/teradata/: api.py  client.py  compiler.py  datatypes.py
data_validation/query_builder/: custom_query_builder.py  custom_query_row_builder.py  ibis_expr.py  partition_row_builder.py  query_builder.py  random_row_builder.py
data_validation/result_handlers/: bigquery.py  result_handler.py  text.py
docs/: Installation.md  connections.md  examples.md  installation.md  validation_cli.md
docs/internal/: distributed_jobs.md  filters_regex.md  kubernetes_jobs.md  partition_table_prd.md
ibis_addon/: operations.py
kokoro/: integration.sh  lint.sh  setup.sh  unit_tests.sh
kokoro/continuous/: integration.cfg  lint.cfg
kokoro/presubmit/: unit_tests.cfg
rel_venv/share/python-wheels/: pip-22.0.2-py3-none-any.whl
samples/: bq_result_handler.py  bq_result_handler_grouped.py  dvt_airflow_dag.py
samples/airflow/: README.md  dvt_airflow_dag.py
samples/airflow/kubernetes_pod_operator/: DOCKERFILE  README.md  deploy.sh  kube_pod_op_dag.py
samples/allow_list/: oracle_to_bigquery.yaml  oracle_to_postgres.yaml
samples/bash/: README.md  auto_partition.sh
samples/bq_utils/: README.md  add_columns_schema.sh  bq-dataset-level-validation.sh  rename_column_schema.sh  update_schema.sh
samples/cloud_functions/: README.md  deploy.sh  main.py  requirements.txt
samples/cloud_run/: README.md  deploy.sh
samples/cloud_run_jobs/: Dockerfile  README.md
samples/docker/: .bash_aliases  Dockerfile  README.md  build_docker.sh  docker-compose.yml  start.sh
samples/functions/: README.md  deploy.sh  main.py  requirements.txt
samples/oracle/: README.md
samples/run/: Dockerfile  README.md  deploy.sh  main.py  test.py
samples/tests/: airflow_test_utils.py  test_airflow_dag.py
terraform/: README.md  main.tf  result_handler_schema.json  results_schema.json  testenv.tf  variables.tf
tests/: local_check.sh  test_data_validation_operators.py  test_data_validations.py  test_simple_count.py
tests/deploy_mysql/: BUILD.env  create_db.sql  load_new_data.sql  setup_mysql.sh
tests/resources/: bigquery_test_tables.sql  custom-query.sql  db2_test_tables.sql  hive_test_tables.sql  mysql_test_tables.sql  oracle_test_tables.sql  postgresql_test_tables.sql  snowflake_test_tables.sql  sqlserver_test_tables.sql  teradata_test_tables.sql
tests/system/: conftest.py  test_secret_manager.py  test_state_manager.py
tests/system/data_sources/: common_functions.py  test_bigquery.py  test_db2.py  test_filesystem.py  test_hive.py  test_mysql.py  test_oracle.py  test_postgres.py  test_snowflake.py  test_spanner.py  test_sql_server.py  test_teradata.py
tests/system/data_sources/deploy_cloudsql/: cloudsql_resource_manager.py  gcloud_context.py  mssql_data.sql  mssql_data_row.sql  mssql_schema.sql  postgres_data.sql
tests/system/ibis_addon/: test_operations.py
tests/system/result_handlers/: test_bigquery.py
tests/unit/: test__main.py  test_cli_tools.py  test_clients.py  test_combiner.py  test_config_manager.py  test_data_validation.py  test_find_tables.py  test_ibis_operations.py  test_metadata.py  test_partition_builder.py  test_result_handlers.py  test_schema_validation.py  test_secret_manager.py  test_state_manager.py  test_validation_builder.py
tests/unit/composer/: test_operators.py
tests/unit/ibis_addon/: test_operations.py
tests/unit/query_builder/: test_custom_query_builder.py  test_custom_query_row_builder.py  test_query_builder.py  test_random_row_builder.py
tests/unit/result_handlers/: test_bigquery.py  test_text.py
tests/unit/test_inputs/: test_partition_builder.json
(+1 files in other folders)
